// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="MuiDialogContent-root-1"
  >
    <div>
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-2 MuiSvgIcon-colorPrimary-3"
        color={undefined}
        focusable="false"
        onClick={[Function]}
        viewBox="0 0 24 24"
      >
        <g>
          <path
            d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
          />
        </g>
      </svg>
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-2 MuiSvgIcon-colorPrimary-3"
        color={undefined}
        focusable="false"
        onClick={[Function]}
        viewBox="0 0 24 24"
      >
        <g>
          <path
            d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
          />
        </g>
      </svg>
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-2 MuiSvgIcon-colorPrimary-3"
        color={undefined}
        focusable="false"
        onClick={[Function]}
        viewBox="0 0 24 24"
      >
        <g>
          <path
            d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
          />
        </g>
      </svg>
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-2 MuiSvgIcon-colorPrimary-3"
        color={undefined}
        focusable="false"
        onClick={[Function]}
        viewBox="0 0 24 24"
      >
        <g>
          <path
            d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
          />
        </g>
      </svg>
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-2 MuiSvgIcon-colorPrimary-3"
        color={undefined}
        focusable="false"
        onClick={[Function]}
        viewBox="0 0 24 24"
      >
        <g>
          <path
            d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
          />
        </g>
      </svg>
    </div>
    <input
      name="rating"
      onBlur={[Function]}
      onChange={[Function]}
      onDragStart={[Function]}
      onDrop={[Function]}
      onFocus={[Function]}
      type="hidden"
      value=""
    />
    <div
      label="Escreva sua avaliação"
      multiline={true}
      name="text"
      validate={
        Array [
          [Function],
        ]
      }
    />
  </div>
  <div
    className="MuiDialogActions-root-8"
  >
    <div
      className="MuiDialogActions-action-9"
      style={
        Object {
          "textDecoration": "none",
        }
      }
      to="/undefined"
    >
      <button
        className="MuiButtonBase-root-26 MuiButton-root-10 MuiButton-flatPrimary-12"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-11"
        >
          Fechar
        </span>
        <span
          className="MuiTouchRipple-root-29"
        />
      </button>
    </div>
    <button
      className="MuiButtonBase-root-26 MuiButton-root-10 MuiButton-flatPrimary-12 MuiDialogActions-action-9"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="submit"
    >
      <span
        className="MuiButton-label-11"
      >
        Enviar
      </span>
      <span
        className="MuiTouchRipple-root-29"
      />
    </button>
  </div>
</form>
`;

exports[`with error renders correctly 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="MuiDialogContent-root-1"
  >
    <div>
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-2 MuiSvgIcon-colorPrimary-3"
        color={undefined}
        focusable="false"
        onClick={[Function]}
        viewBox="0 0 24 24"
      >
        <g>
          <path
            d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
          />
        </g>
      </svg>
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-2 MuiSvgIcon-colorPrimary-3"
        color={undefined}
        focusable="false"
        onClick={[Function]}
        viewBox="0 0 24 24"
      >
        <g>
          <path
            d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
          />
        </g>
      </svg>
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-2 MuiSvgIcon-colorPrimary-3"
        color={undefined}
        focusable="false"
        onClick={[Function]}
        viewBox="0 0 24 24"
      >
        <g>
          <path
            d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
          />
        </g>
      </svg>
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-2 MuiSvgIcon-colorPrimary-3"
        color={undefined}
        focusable="false"
        onClick={[Function]}
        viewBox="0 0 24 24"
      >
        <g>
          <path
            d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
          />
        </g>
      </svg>
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-2 MuiSvgIcon-colorPrimary-3"
        color={undefined}
        focusable="false"
        onClick={[Function]}
        viewBox="0 0 24 24"
      >
        <g>
          <path
            d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
          />
        </g>
      </svg>
    </div>
    <input
      name="rating"
      onBlur={[Function]}
      onChange={[Function]}
      onDragStart={[Function]}
      onDrop={[Function]}
      onFocus={[Function]}
      type="hidden"
      value=""
    />
    <div
      label="Escreva sua avaliação"
      multiline={true}
      name="text"
      validate={
        Array [
          [Function],
        ]
      }
    />
    <div>
      foo error
    </div>
  </div>
  <div
    className="MuiDialogActions-root-8"
  >
    <div
      className="MuiDialogActions-action-9"
      style={
        Object {
          "textDecoration": "none",
        }
      }
      to="/undefined"
    >
      <button
        className="MuiButtonBase-root-26 MuiButton-root-10 MuiButton-flatPrimary-12"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-11"
        >
          Fechar
        </span>
        <span
          className="MuiTouchRipple-root-29"
        />
      </button>
    </div>
    <button
      className="MuiButtonBase-root-26 MuiButton-root-10 MuiButton-flatPrimary-12 MuiDialogActions-action-9"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="submit"
    >
      <span
        className="MuiButton-label-11"
      >
        Enviar
      </span>
      <span
        className="MuiTouchRipple-root-29"
      />
    </button>
  </div>
</form>
`;
